src/main/java/com/example/timski/model/errors/UsernameAlreadyExists.java
package com.example.timski.model.errors;

public class UsernameAlreadyExists extends RuntimeException{
    public UsernameAlreadyExists(String username) {

        super(String.format("Username %s already exist", username));
    }
}
